[Fix] notion-toggle 내부 element overflow 해결 (#68)
* Bugfix: notion-toggle 내부 element overflow 해결

* Refactor: delete useless important

--- a/src/styles/notion.css
+++ b/src/styles/notion.css
@@ -13,6 +13,10 @@
   @apply my-1;
 }
 
+.notion-toggle{
+  @apply w-full;
+}
+
 .notion-list li {
   @apply py-0;
 }
